src/test/ui/duplicate_entry_error.stderr
error[E0152]: duplicate lang item found: `panic_impl`.
  --> $DIR/duplicate_entry_error.rs:10:1
   |
LL | / fn panic_impl(info: &PanicInfo) -> ! {
LL | |
LL | |     loop {}
LL | | }
   | |_^
   |
   = note: first defined in crate `std`.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
